--- a/webPage/spotify.html
+++ b/webPage/spotify.html
@@ -87,7 +87,7 @@
                                         <label for="playlistTextarea" class="form-label mt-4">Playlists</label>
                                         <textarea class="form-control" id="playlistTextarea" rows="31"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-success mt-2" id="saveButton">Save</button>
+                                    <button class="btn btn-success mt-2" id="saveButton">Save</button>
                                 </fieldset>
                             </form>
                         </div>
