feat : implement reset playlist

--- a/webPage/spotify.html
+++ b/webPage/spotify.html
@@ -87,7 +87,10 @@
                                         <label for="playlistTextarea" class="form-label mt-4">Playlists</label>
                                         <textarea class="form-control" id="playlistTextarea" rows="31"></textarea>
                                     </div>
-                                    <button class="btn btn-success mt-2" id="saveButton">Save</button>
+                                    <div class="d-flex justify-content-between">
+                                        <button class="btn btn-success mt-2" id="saveButton">Save</button>
+                                        <button class="btn btn-danger mt-2" id="resetPlaylist">Reset to origin</button>
+                                    </div>
                                 </fieldset>
                             </form>
                         </div>
