refacto : remove game of role + rework iframe css to avoid replication for nothing

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -31,17 +31,14 @@
                         <h1 class="modal-title">Chromusic</h1>
                     </div>
                     <div class="modal-body">
-                        <div>
+                        <div class="d-flex justify-content-between">
                             <button class="btn btn-secondary" id="phenixRadioPlayPauseButton">
                                 <i class="fas fa-play fa-fw"></i>&nbsp; Radio Phénix
                             </button>
-                        </div>
-                        <div class="mt-2">
-                            <a href="./spotify.html?playing=GameOfRole" class="btn btn-secondary">Game of Role</a>
-                        </div>
-                        <div class="btn-group mt-2" role="group" aria-label="Basic example">
-                            <a href="./spotify.html" class="btn btn-secondary">Spotify Playlist</a>
-                            <a href="./spotify.html?playing=true" class="btn btn-secondary"><i class="fas fa-play fa-fw"></i></a>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <a href="./spotify.html" class="btn btn-secondary">Spotify Playlist</a>
+                                <a href="./spotify.html?playing=true" class="btn btn-secondary"><i class="fas fa-play fa-fw"></i></a>
+                            </div>
                         </div>
                         <div class="mt-2">
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
