--- a/webPage/spotify.html
+++ b/webPage/spotify.html
@@ -72,7 +72,7 @@
                                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                                     loading="lazy"></iframe>
                             </li>
-                            <li class="list-group-item spotify-last-iframe">
+                            <li class="list-group-item spotify-iframe">
                                 <iframe title="Melanie Martinez - Portals"
                                     src="https://open.spotify.com/embed/album/4kI7ZZF6CgDGFTjZNFwXYG" width="100%"
                                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
