feat(radioPhenix) : add a volume control for phenix radio

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -37,8 +37,13 @@
                             </button>
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 <a href="./spotify.html" class="btn btn-secondary">Spotify Playlist</a>
-                                <a href="./spotify.html?playing=true" class="btn btn-secondary"><i class="fas fa-play fa-fw"></i></a>
+                                <a href="./spotify.html?playing=true" class="btn btn-secondary"><i
+                                        class="fas fa-play fa-fw"></i></a>
                             </div>
+                        </div>
+                        <div class="mt-2 col-3" style="display: none;" id="phenixRadioVolumeDiv">
+                            <label for="phenixRadioVolume" class="badge">Volume (100%)</label>
+                            <input type="range" class="form-range" id="phenixRadioVolume" value="100">
                         </div>
                         <div class="mt-2">
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
